2007-05-09  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added a gtk-sharp reference
	* Banter/PreferencesDialog.cs: Updated calls to AddMessage to pass null
	  for the avatar path
	* Banter/Application.cs: Added code to create a Person for Me
	* Banter/Person.cs: Added a cachePath and stored off the avatar from
	  EDS
	* Banter/ChatWindow.cs: Changed the AddMessage method to send an avatar
	  path if available
	* Banter/PersonCard.cs: Updated to use the avatar created in the Person
	  object
	* Banter/MessagesView.cs: changed AddMessage to take an avatarPath but
	  ignore it if it's null

2007-05-04  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bump the version to 0.1.2.

2007-05-04  Boyd Timothy <btimothy@gmail.com> 

	* NEWS: Updated for the 0.1.1 release.

2007-05-04  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Changed the version to 0.1.1 for the new release
	  (should have done this earlier)

2007-05-04  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Remove unnecessary debug comments.

2007-05-04  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Enabled the OnDestroy code
	* Banter/PersonView.cs: Enabled the OnDelete code so the event handlers
	  get disconnected

2007-05-04  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs, Banter/PersonView.cs: Cleaned up comments and
	  regions in file

2007-05-04  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonGroup.cs: Added comments where missing
	* Banter/Person.cs: Cleaned up formatting and added FIXME messages to
	  poorly implemented properties
	* Banter/PersonStore.cs: Added Comments where missing

2007-05-03  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Remove SaveStateTimeout on the deleted event.
	* Banter/Preferences.cs: Fix the code so that when you do a
	  Preferences.Get and it doesn't exist, it will attempt to use a
	  default value.

2007-05-03  Calvin Gaisford <calvinrg@gmail.com> 
